Fix z-index for header select

--- a/css/styles.css
+++ b/css/styles.css
@@ -3560,6 +3560,9 @@ textarea {
   bottom: 0;
 }
 
+.header__select {
+  z-index: 10;
+}
 .header__select .select__button {
   background: -webkit-gradient(linear, left top, left bottom, from(#161622), to(#12121f));
   background: linear-gradient(180deg, #161622 0%, #12121f 100%);
